# sekigae-rs

./: .gitignore  Cargo.toml  README.md  leptosfmt.toml  styles.css
.github/workflows/: generate-latest-json.yml
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/csv/: init.csv
